SOHO-7272 - Fixed inline error icon was not aligning with validation http://localhost:4000/components/validation/test-on-modal

--- a/components/icons/_icons.scss
+++ b/components/icons/_icons.scss
@@ -57,12 +57,17 @@ svg.icon-dirty,
     width: 18px;
   }
 
-  .icon-confirm,
+  .icon-confirm {
+    position: relative;
+    right: auto;
+    top: auto;
+  }
+
   [data-error-type="tooltip"] ~ .icon-error,
   [data-error-type="tooltip"] ~ .icon-confirm {
     position: relative;
     right: auto;
-    top: auto;
+    top: -5px;
   }
 
   .dropdown-wrapper {
@@ -82,6 +87,16 @@ svg.icon-dirty,
       top: 55px;
     }
   }
+
+  textarea {
+    &[data-error-type="tooltip"] ~ .icon-error,
+    &[data-error-type="tooltip"] ~ .icon-confirm {
+      position: absolute;
+      top: 20px;
+    }
+  }
+
+
 
   .lookup-wrapper {
     .icon-error,
